--- a/Assignment MSB104.Rmd
+++ b/Assignment MSB104.Rmd
@@ -4,7 +4,7 @@ author: "Heidi Marie Rolfsnes and Ann Elisabeth Jacobsen"
 output: html_document
 ---
 
-```{r Calculate GDP per capita}
+```{r Packages}
 suppressMessages(library(tidyverse))
 suppressMessages(library(lubridate))
 suppressMessages(library(tibble))
@@ -15,350 +15,24 @@ options(scipen = 999)
 ```
 
 ```{r GDP from Portugal, France, Hungary, Slovakia and Denmark}
-data <- read_csv("nama_10r_3gdp__custom_3521535_page_linear.csv")
+data<- read.csv("nama_10r_3gdp__custom_3521535_page_linear.csv")
 head(data)
-geo<-100*data$DK/data*
 ```
+```{r}
 
-
+data_geo <- data[data$isocode == "DK",]
+```
 
 ```{r}
-RY<-cbind(data)
+data_geo <- cbind (data_geo, "DK" = data_geo$rgdpe / data_geo$pop) 
+ggplot (data_geo, 
+        aes (x = time_period, y = OBS_value)) +
+    geom_line ()
 ```
-
-## 4. What variables does the gapminder dataset from the gapminder package contain? To what continent are Australia and New Zealand assigned?
-
-    #142 land
-
-    #5 kontinenter
-
-    #Årene 1957 til 2007
-
-    #Folketall (population)
-
-    #BnP per inbygger.
-
-
-```{r}
-    g_c <- g_c %>%
-   mutate(continent = case_when(
-     world_4region == "asia" & un_sdg_region %in% c("un_australia_and_new_zealand","un_oceania_exc_australia_and_new_zealand") ~ "Oceania",
-     world_4region == "asia" & !(un_sdg_region %in% c("un_australia_and_new_zealand", "un_oceania_exc_australia_and_new_zealand")) ~ "Asia",
-     world_4region == "africa" ~ "Africa",
-     world_4region == "americas" ~ "Americas",
-     world_4region == "europe" ~ "Europe")
-   ) %>% 
-   filter(!is.na(iso3166_1_alpha3))
-```
-
-## 6. How many countries are there now?
-
-```{r Land}
-length(unique(g_c$country))
-```
-
-Nå er det 247 land.
-
-## 6b) How many countries are there now in each continent?
-
-```{r Land i det ulike kontinentene}
-g_c %>%
-  group_by(continent) %>%
-  summarise(countries= length(unique(country)))
-```
-
-## 7. Create the variable Life Expectancy (lifeExp) in g_c from the file
-
-    ```{r forventet levetid i antall land}
-    lifeExp <- read_csv("data/countries-etc-datapoints/ddf--datapoints--life_expectancy_years--by--geo--time.csv",
-    col_types = cols(time = col_date(format = "%Y")))
-    lifeExp <- lifeExp %>% 
-      rename(year = time)
-    names(lifeExp)
-    length(unique(lifeExp$geo))
-    ```
-
-## 8. How many countries have information about lifeExp?
-
-    195 land har informasjon om levetid.
-
-```{r Levetid land}
-length(unique(lifeExp$geo))
-```
-
-## 9. reduce g_c to the variables: country, name, iso3166_1\_alpha3,un_sdg_region, world_4region, continent, world_6region
-
-    ```{r Reduser variabler}
-    g_c <- g_c %>%
-      select(country, name, iso3166_1_alpha3, un_sdg_region, world_4region, continent, world_6region) %>%
-      left_join(lifeExp, by = c("country" = "geo"))
-    ```
-
-```{r navn}
-names(g_c)
-```
-
-## 10. What is the first observation of lifeExp for the different countries?
-
-    ```{r levetid i ulike land}
-    g_c_min <- g_c %>%
-      group_by(country) %>%
-      summarise(min_year = min(lifeExp$year))
-      table(g_c_min$min_year)
-    ```
-
-De første 186 observasjonene er fra 1800, mens de resterende 9 er fra 1950.
-
-## 11. What are the name of the 9 countries that only have life expectancy
-
-```{r forventet levetid}
-g_c_min <- g_c_min %>%
-  left_join(g_c,
-            by = "country") %>%
-  filter(min_year == "1950-01-01")
-tibble(country = unique(g_c_min$name))
-```
-
-## 12. Read in the total_population and join with g_c
 
 ```{r folketall}
 pop <- read_csv("demo_r_pjanaggr3__custom_3539873_page_linear.csv",
-                 col_types = cols(geo = col_date(obs_value = "%Y")))
-```
+                 col_types = cols(time = col_date(format = "%Y")))
+````
 
-```{r}
-g_c <- g_c %>%
-  left_join(pop, by = c("country" = "geo", "year" ="time"))
-```
 
-## 13. Read in the gdp_percapita_us_inflation_adjusted and call it "gdp_pc" Rename life_expectancy_years to lifeExp, population_total to pop and gdppercapita_us_inflation_adjusted to gdpPercap
-
-    ```{r Datasett}
-    gdp_pc <- read_csv("data/countries-etc-datapoints/ddf--datapoints--gdppercapita_us_inflation_adjusted--by--geo--time.csv",
-     col_types = cols(time = col_date(format = "%Y")))
-    ```
-
-```{r}
- g_c <- g_c %>%
-      left_join(gdp_pc, by = c("country" = "geo", "year" = "time"))
-rm(gdp_pc)
-```
-
-    ```{r nye navn}
-    g_c <- g_c %>%
-      rename(lifeExp = "life_expectancy_years") %>%
-      rename(pop = "population_total") %>%
-      rename(gdpPercap = "gdppercapita_us_inflation_adjusted")
-                          
-    # slik kan dere se de nye navnene. names() til slutt i pipen er litt farlig.
-    # hvis vi starter pipen med g_c %>% vil se se navnene i dataframen som ønsket
-    # Endrer vi til g_c <- g_c %>% vil vi overskrive hele dataframen med variabelnavnene
-    # Hvis en bare vil se navnene er Environment i høyre hjørne glimrende. Ve å klikke på
-    # den lille pilen får en se hva som er definert i et objekt
-    names(g_c)
-    ```
-
-```{r navn2}
-names(g_c)
-```
-
-## 14. As in gapminder use data from every 5th year, but include 2019 at the end.
-
-```{r Data fra hvert femte år}
-t1 <- paste(c(seq(1800,2015, by = 5), 2019), "01-01", sep = "-") %>%
-  parse_date(format = "%Y-%m-%d")
-
-g_c_5 <- g_c %>%
-  filter(year %in% t1) %>%
-  select(country, name, continent, year, lifeExp, pop, gdpPercap)
-dim(g_c_5)
-```
-
-```{r}
-g_c_gdpprc <- g_c_5 %>% 
-  group_by(gdpPercap) %>% 
-  summarise(min_year = min(year))
-table(g_c_gdpprc$min_year)
-```
-
-## 15. Make a vector containing the names of the countries with the longest time series for gdp per capita
-
-```{r}
-# Tar vare på g_c (hele datasettet)som my_gapminder
-my_gapminder <- g_c
-```
-
-```{r vector}
-g_c <- g_c %>%
-  filter(!is.na(gdpPercap)) %>%
-  group_by(name) %>%
-    summarise(nr = n()) %>%
-    arrange(name)
-print(g_c)
-```
-
-## 16. make a subset of gapminder, my_gapminder_1960, which include countries with data from 1960-2019. How many countries are now in the dataset? How many countries from each continent? how many NAs are there in my_gapminder_1960
-
-    ```{r}
-      c_m_y_60 <- g_c_5 %>%
-      filter(!is.na(gdpPercap)) %>%
-      group_by(country) %>%
-      summarise(min_year = min(year))
-    ```
-
-```{r}
-dim(c_m_y_60)
-```
-
-```{r}
-# problem med navn
-#c_m_y_60 <- my_gapminder_60$country[my_gapminder_60$min_year == "1960-01-01"]
-#my_gapminder_60 <- g_c_5 %>%
-#  filter(country %in% c_m_y_60)
-
-c_m_y_60 <- c_m_y_60$country[c_m_y_60$min_year == "1960-01-01"]
-
-my_gapminder_1960 <- g_c_5 %>%
-  filter(country %in% c_m_y_60) %>% 
-  # Vil bare ha data f.o.m 1960 for disse landene
-  filter(year(year) >= 1960)
-```
-
-```{r observasjoner}
-dim(my_gapminder_1960)
-```
-
-```{r antall land }
-length(unique(my_gapminder_1960$country))
-```
-
-```{r}
-(num_NA <- c_m_y_60[is.na(c_m_y_60$gdpPercap) == TRUE, ])
-# is.na gir TRUE (som er 1) hvis NA og FALSE (som er 0) hvis ikke NA.  
-```
-
-```{r}
-# et alternativ til ovenfor
-is.na(my_gapminder_1960$gdpPercap) %>% 
-  table()
-```
-
-```{r}
-#paste("Number of NAs in g_c_1960 is", dim(num_NA)[1], sep = " ")
-paste("Number of NAs in g_c_1960 is", sum(is.na(my_gapminder_1960$gdpPercap)))
-```
-
-```{r Kontinenter}
-my_gapminder_1960 %>%
-  distinct(country, continent) %>%
-  group_by(continent) %>%
-  count() %>%
-  kable()
-```
-
-## 17. Use ggplot() and let x be gdpPercap, y be lifeExp and size the population. Make a plot for each of the year 1960, 1980, 2000 and 2019.
-
-    ```{r 1960}
-    my_gapminder_1960 %>%
-      filter(year <= "1960-01-01") %>%
-      ggplot(mapping = aes(x = gdpPercap, y = lifeExp, size = pop, colour = continent)) +
-      geom_point() +
-      facet_wrap(ncol = 1, ~year) +
-      coord_cartesian(ylim = c(20, 90), xlim = c(0,30000)) +
-       ggtitle("1960") + 
-      theme(legend.position = "bottom")
-    ```
-
-    ```{r 1980}
-    my_gapminder_1960 %>%
-      # velger 1980
-      #filter(year <= "1980-01-01") %>%
-      filter(year == "1980-01-01") %>%
-      ggplot(mapping = aes(x = gdpPercap, y = lifeExp, size = pop, colour = continent)) +
-      geom_point() +
-      facet_wrap(ncol = 1, ~year) +
-      coord_cartesian(ylim = c(20, 90), xlim = c(0,30000)) +
-       ggtitle("1980") +
-      theme(legend.position = "bottom")
-    ```
-
-    ```{r 2000}
-     my_gapminder_1960 %>%
-      filter(year == "2000-01-01") %>%
-      ggplot(mapping = aes(x = gdpPercap, y = lifeExp, size = pop, colour = continent)) +
-      geom_point() +
-      facet_wrap(ncol = 1, ~year) +
-      coord_cartesian(ylim = c(20, 90), xlim = c(0,30000)) +
-       ggtitle("2000") +
-      theme(legend.position = "bottom")
-    ```
-
-    ```{r 2019}
-     my_gapminder_1960 %>%
-      filter(year == "2019-01-01") %>%
-      ggplot(mapping = aes(x = gdpPercap, y = lifeExp, size = pop, colour = continent)) +
-      geom_point() +
-      facet_wrap(ncol = 1, ~year) +
-      coord_cartesian(ylim = c(20, 90), xlim = c(0,110000)) +
-       ggtitle("2019") +
-      theme(legend.position = "bottom")
-    ```
-
-## 18. Do the same four plots as above, but now use the log transform of gdpPercap, i.e mapping.
-
-    ```{r 1960gdp}
-    my_gapminder_1960 %>%
-      filter(year == "1960-01-01") %>%
-      ggplot(mapping = aes(x = log(gdpPercap), y = lifeExp, size = pop, colour = continent)) +
-      geom_point() +
-      coord_cartesian(ylim = c(20, 90), xlim = c(5, 11)) +
-       ggtitle("1960") +
-      theme(legend.position = "bottom")
-    ```
-
-    ```{r 1980gdp}
-       my_gapminder_1960 %>%
-      filter(year == "1980-01-01") %>%
-      ggplot(mapping = aes(x = log(gdpPercap), y = lifeExp, size = pop, colour = continent)) +
-      geom_point() +
-      coord_cartesian(ylim = c(20, 90), xlim = c(5, 11)) +
-       ggtitle("1980") +
-      theme(legend.position = "bottom")
-    ```
-
-    ```{r 2000gdp}
-      my_gapminder_1960 %>%
-      filter(year == "2000-01-01") %>%
-      ggplot(mapping = aes(x = log(gdpPercap), y = lifeExp, size = pop, colour = continent)) +
-      geom_point() +
-      coord_cartesian(ylim = c(20, 90), xlim = c(5, 12)) +
-       ggtitle("2000") +
-      theme(legend.position = "bottom")
-    ```
-
-    ```{r 2019gdp}
-      my_gapminder_1960 %>%
-      filter(year == "2019-01-01") %>%
-      ggplot(mapping = aes(x = log(gdpPercap), y = lifeExp, size = pop, colour = continent)) +
-      geom_point() +
-      coord_cartesian(ylim = c(20, 90), xlim = c(5, 12)) +
-       ggtitle("2019") +
-      theme(legend.position = "bottom")
-    ```
-
-## 19. How will you characterise the development the 59 years from 1960 to 2019?
-
-    Levetiden har økt betraktelig fra 1960 til 2019.
-
-## 20. Save your datafiles as my_gapminder.csv and my_gapminder_red.csv
-
-```{r Lagre datafiler}
-#write.table(g_c_5, file="my_gapminder.csv", sep = ",")
-#write.table(g_c_1960, file="my_gapminder_red.csv", sep = ",")
-write.table(my_gapminder, file="my_gapminder.csv", sep = ",")
-write.table(my_gapminder_1960, file="my_gapminder_red.csv", sep = ",")
-```
-
-```{r}
-#siste
-```
