--- a/Assignment MSB104.Rmd
+++ b/Assignment MSB104.Rmd
@@ -110,8 +110,18 @@ summary(FR)
 In the summary of France there are a hug differense in min and max. this is because France has colonies in other countries that are counted, these colonies are located in Africa and South America which have a negative effect on the overall GDP of France. 'further research then these countries should be removed from the data set.
 
 
-lage en chunk der vi fjerner FRY landene. 
+```{r France without the FRY regions}
+#| echo = FALSE
+FR1 <- group_by(BNP2, Regio_id, Year) %>%
+filter(Regio_id %in% c("FR101", "FR102", "FR103", "FR104", "FR105", "FR106", "FR107", "FR108", "FRB01", "FRB02", "FRB03", "FRB04", "FRB05", "FRB06" , "FRC11", "FRC12","FRC13", "FRC14", "FRC21", "FRC22, FRC23", "FRC24", "FRD11", "FRD12","FRD13", "FRD21", "FRD22, FRE11", "FRE12", "FRE21", "FRE22", "FRE23","FRF11", "FRF12", "FRF21", "FRF22, FRF23", "FRF24", "FRF31", "FRF32", "FRF33","FRF34", "FRG01", "FRG02", "FRG03, FRG04", "FRG05", "FRH01", "FRH02", "FRF03, FRH04", "FRI11", "FRI12", "FRI13", "FRI14, FRI15", "FRI21", "FRI22", "FRI23, FRI31", "FRI32", "FRI33", "FRI34","FRJ11", "FRJ12",	"FRJ13",	"FRJ14",	"FRJ15",	"FRJ21",	"FRJ22",	"FRJ23",	"FRJ24",	"FRJ25",	"FRJ26",	"FRJ27"	,"FRJ28",	"FRK11",	"FRK12",	"FRK13",	"FRK14",	"FRK21",	"FRK22",	"FRK23",	"FRK24",	"FRK25",	"FRK26",	"FRK27",	"FRK28",	"FRL01",	"FRL02",	"FRL03",	"FRL04",	"FRL05",	"FRL06",	"FRM01",	"FRM02","FRXXX")) %>%
+ select("Year", "Regio_id", "Per_capita")
+	pivot_wider(FR,names_from = "Year", values_from = "Per_capita" )
+	summarise(FR, GDP_per_Capita = mean(Per_capita))
+````
 
+```{r}
+summary(FR1)
+```	
 ##Hungary
 
 ```{r Hungary}
